[package]
name = "cs43l22"
version = "0.1.0"
authors = ["Ian Mobley <ianmobley@gmail.com>"]
description = "A rust device driver for the Cirrus Logic 43L22 stereo DAC"
repository = "https://github.com/iMobs/cs43l22"
license = "MIT"
keywords = ["cs43l22", "audio", "codec"]
categories = ["embedded", "no-std", "embedded-hal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal = "0.2.7"

[dev-dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f4xx-hal = { version = "0.15", features = ["stm32f407", "defmt", "i2s"] }

[features]
defmt = ["dep:defmt"]

[[example]]
name = "simple"
required-features = ["defmt"]
